Combining everything till now